Make BlockHashLookup a Functional Interface.  Rename existing BlockHashLookup to CachingBlockHashLookup
Signed-off-by: Danno Ferrin <danno.ferrin@swirldslabs.com>