@@ -26,11 +26,11 @@ import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSpec;
 import org.hyperledger.besu.ethereum.mainnet.TransactionValidationParams;
 import org.hyperledger.besu.ethereum.vm.BlockHashLookup;
+import org.hyperledger.besu.ethereum.vm.CachingBlockHashLookup;
 import org.hyperledger.besu.ethereum.worldstate.WorldStateArchive;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class BlockReplay {
 
@@ -63,7 +63,7 @@ public class BlockReplay {
                               blockchain,
                               mutableWorldState,
                               transactionProcessor))
-                  .collect(Collectors.toList());
+                  .toList();
           return Optional.of(new BlockTrace(transactionTraces));
         });
   }
@@ -78,7 +78,7 @@ public class BlockReplay {
     return performActionWithBlock(
         blockHash,
         (body, header, blockchain, mutableWorldState, transactionProcessor) -> {
-          final BlockHashLookup blockHashLookup = new BlockHashLookup(header, blockchain);
+          final BlockHashLookup blockHashLookup = new CachingBlockHashLookup(header, blockchain);
           for (final Transaction transaction : body.getTransactions()) {
             if (transaction.getHash().equals(transactionHash)) {
               return Optional.of(
@@ -114,7 +114,7 @@ public class BlockReplay {
               blockHeader,
               transaction,
               spec.getMiningBeneficiaryCalculator().calculateBeneficiary(blockHeader),
-              new BlockHashLookup(blockHeader, blockchain),
+              new CachingBlockHashLookup(blockHeader, blockchain),
               false,
               TransactionValidationParams.blockReplay());
           return action.performAction(
@@ -145,7 +145,7 @@ public class BlockReplay {
     if (previous == null) {
       return Optional.empty();
     }
-    try (final var worldState =
+    try (final MutableWorldState worldState =
         worldStateArchive
             .getMutable(previous.getStateRoot(), previous.getBlockHash(), false)
             .map(
